// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RepOnOffDiagView RepOnOffDiagView - should create snapshot (expanded mode=[false], threshold=[undefined]) 1`] = `
<span>
  <span>
    <b>
      Replacement 'On-Off' 
      
      Diagnostics For [
      Wiggins, Aaron
      ]
    </b>
     
    <a
      href="https://hoop-explorer.blogspot.com/2020/03/diagnostics-mode-for-replacement-onoff.html"
      target="_blank"
    >
      (?)
    </a>
  </span>
  <ul>
    <li>
      Offensive analysis ([
      <b />
      ] pts/100):
    </li>
    <ul>
      <li>
        [
        <b>
          1
        </b>
        ] 
        Good
         "Same-4"s, total contrib=[
        <b>
          1.4
        </b>
        ] (mean=[
        <b>
          1.4
        </b>
        ], std=[
        <b>
          0.0
        </b>
        ]).
         All lineups similar.
      </li>
      <ul />
      <li>
        [
        <b>
          1
        </b>
        ] 
        Bad
         "Same-4"s, total contrib=[
        <b>
          -1.5
        </b>
        ] (mean=[
        <b>
          -1.5
        </b>
        ], std=[
        <b>
          0.0
        </b>
        ]).
         All lineups similar.
      </li>
      <ul />
    </ul>
    <li>
      Defensive analysis ([
      <b />
      ] pts/100):
    </li>
    <ul>
      <li>
        [
        <b>
          1
        </b>
        ] 
        Bad
         "Same-4"s, total contrib=[
        <b>
          2.7
        </b>
        ] (mean=[
        <b>
          2.7
        </b>
        ], std=[
        <b>
          0.0
        </b>
        ]).
         All lineups similar.
      </li>
      <ul />
      <li>
        [
        <b>
          1
        </b>
        ] 
        Good
         "Same-4"s, total contrib=[
        <b>
          -1.0
        </b>
        ] (mean=[
        <b>
          -1.0
        </b>
        ], std=[
        <b>
          0.0
        </b>
        ]).
         All lineups similar.
      </li>
      <ul />
    </ul>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        To view more detailed analysis for just this player click here
      </a>
      .
    </li>
  </ul>
</span>
`;

exports[`RepOnOffDiagView RepOnOffDiagView - should create snapshot (expanded mode=[true], threshold=[0]) 1`] = `
<span>
  <span>
    <b>
      Replacement 'On-Off' 
      
      Diagnostics For [
      Wiggins, Aaron
      ]
    </b>
     
    <a
      href="https://hoop-explorer.blogspot.com/2020/03/diagnostics-mode-for-replacement-onoff.html"
      target="_blank"
    >
      (?)
    </a>
  </span>
  <ul>
    <li>
      Offensive analysis ([
      <b />
      ] pts/100):
    </li>
    <ul>
      <li>
        [
        <b>
          1
        </b>
        ] 
        Good
         "Same-4"s, total contrib=[
        <b>
          1.4
        </b>
        ] (mean=[
        <b>
          1.4
        </b>
        ], std=[
        <b>
          0.0
        </b>
        ]).
         Key lineups:
      </li>
      <ul>
        <li>
          <div>
            <a
              href="/?autoOffQuery=false&baseQuery=test&offQuery=NOT%20%22Wiggins%2C%20Aaron%22%20AND%20%7B%22Wiggins%2C%20Aaron%22%3B%22AnCowan%22%3B%22ErAyala%22%3B%22JaSmith%22%7D%3D4&onQuery=%22Wiggins%2C%20Aaron%22%20AND%20%7B%22Wiggins%2C%20Aaron%22%3B%22AnCowan%22%3B%22ErAyala%22%3B%22JaSmith%22%7D%3D4&"
              target="_blank"
            >
              AaWiggins / AnCowan / ErAyala / JaSmith
            </a>
          </div>
           contrib=[
          <b>
            1.37
          </b>
          ]  (poss=[
          <b>
            264.2
          </b>
          ], [
          <b>
            46.5
            %
          </b>
          ])
        </li>
        <li>
          Key sub-ins: 
          <span>
            <div>
              <a
                href="/TeamReport?baseQuery=%28%7B%22Wiggins%2C%20Aaron%22%3B%22DoScott%22%7D%3D1%29%20AND%20%28test%29&filter=AaWiggins&incRepOnOff=true&repOnOffDiagMode=20&"
                target="_blank"
              >
                DoScott
              </a>
            </div>
             (poss=[
            <b>
              197
            </b>
            ])
            
          </span>
        </li>
      </ul>
      <li>
        [
        <b>
          1
        </b>
        ] 
        Bad
         "Same-4"s, total contrib=[
        <b>
          -1.5
        </b>
        ] (mean=[
        <b>
          -1.5
        </b>
        ], std=[
        <b>
          0.0
        </b>
        ]).
         All lineups similar.
      </li>
      <ul />
    </ul>
    <li>
      Defensive analysis ([
      <b />
      ] pts/100):
    </li>
    <ul>
      <li>
        [
        <b>
          1
        </b>
        ] 
        Bad
         "Same-4"s, total contrib=[
        <b>
          2.7
        </b>
        ] (mean=[
        <b>
          2.7
        </b>
        ], std=[
        <b>
          0.0
        </b>
        ]).
         Key lineups:
      </li>
      <ul>
        <li>
          <div>
            <a
              href="/?autoOffQuery=false&baseQuery=test&offQuery=NOT%20%22Wiggins%2C%20Aaron%22%20AND%20%7B%22Wiggins%2C%20Aaron%22%3B%22AnCowan%22%3B%22ErAyala%22%3B%22JaSmith%22%7D%3D4&onQuery=%22Wiggins%2C%20Aaron%22%20AND%20%7B%22Wiggins%2C%20Aaron%22%3B%22AnCowan%22%3B%22ErAyala%22%3B%22JaSmith%22%7D%3D4&"
              target="_blank"
            >
              AaWiggins / AnCowan / ErAyala / JaSmith
            </a>
          </div>
           contrib=[
          <b>
            2.66
          </b>
          ]  (poss=[
          <b>
            257.8
          </b>
          ], [
          <b>
            46.0
            %
          </b>
          ])
        </li>
        <li>
          Key sub-ins: 
          <span>
            <div>
              <a
                href="/TeamReport?baseQuery=%28%7B%22Wiggins%2C%20Aaron%22%3B%22DoScott%22%7D%3D1%29%20AND%20%28test%29&filter=AaWiggins&incRepOnOff=true&repOnOffDiagMode=20&"
                target="_blank"
              >
                DoScott
              </a>
            </div>
             (poss=[
            <b>
              197
            </b>
            ])
            
          </span>
        </li>
      </ul>
      <li>
        [
        <b>
          1
        </b>
        ] 
        Good
         "Same-4"s, total contrib=[
        <b>
          -1.0
        </b>
        ] (mean=[
        <b>
          -1.0
        </b>
        ], std=[
        <b>
          0.0
        </b>
        ]).
         All lineups similar.
      </li>
      <ul />
    </ul>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        To clear the detailed analysis and player filter click here
      </a>
      .
    </li>
  </ul>
</span>
`;
